syntax = "proto3";
package proto;

import "google/protobuf/empty.proto";
import "pkg/proto/shared.proto";

option go_package = "WLF/pkg/proto";

// Clients authorization for accessing master
message ClientAuthorization {
  string username = 1;
  string password = 2;
}

// True or false if authorization is ok
message ClientAuthorizationResult {
  bool ok = 1;
}

// The request which user has
message ClientRequest {
  oneof request {
    NewJobMessage newJob = 1;
    google.protobuf.Empty jobList = 2;
    JobLogRequestMessage jobLog = 3;
    google.protobuf.Empty nodeList = 4;
    google.protobuf.Empty nodeTop = 5;
  }
}

message JobLogRequestMessage {
  string job_id = 1;
  // tail or head?
  bool tail = 2;
  // Show live logs?
  bool live = 3;
  uint32 line_count = 4;
}

// Status of a slave to send to client with node list
message SlaveStatus {
  uint32 id = 1;
  string address = 2;
  bool dead = 3;
}

// An array of SlaveStatus
message SlavesStatus {
  repeated SlaveStatus status = 1;
}

// Result of top command on slaves
message SlavesTop {
  // Both slave_ids and slave_tops must have the same size.
  // Same index in slave_id must be for same index in slave_top.
  repeated uint32 slave_ids = 1;
  repeated SlaveTop slave_tops = 2;
}